Fazendo tela de login

--- a/EuSouDoRock_Inicio.html
+++ b/EuSouDoRock_Inicio.html
@@ -16,11 +16,11 @@
     <div class="NavegandoNoRock">
         <h1>Eu Sou Do ROCK</h1>
 
-        <ul>Inicio</ul>
-        <ul>Login</ul>
-        <ul>Cadastro</ul>
-        <ul>Sobre Nós</ul>
-        <ul>Sou do ROCK?</ul>
+        <li>Inicio</li>
+        <li>Login</li>
+        <li><a href="EuSouDoRock_Cadastro.html">Cadastro</a></li>
+        <li>Sobre Nós</li>
+        <li>Sou do ROCK?</li>
 
     </div>
 </div>
