Fazer alguns ajustes, implementar a API e fazer as telas restantes

--- a/EuSouDoRock_Cadastro.html
+++ b/EuSouDoRock_Cadastro.html
@@ -10,6 +10,19 @@
 <link rel="stylesheet" href="EuSouDoRockComEstilo_Cadastro.css">
 
 <body background="https://cdn.wallpapersafari.com/75/15/8GeHxf.jpg">
+    <div class="header">
+        <div class="container">
+            <div class="NavegandoNoRock">
+                <h1>Eu Sou Do ROCK</h1>
+
+                <li><a href="EuSouDoRock_Inicio.html">Inicio</a></li>
+                <li><a href="EuSouDoRock_Login.html">Login</a></li>
+                <li><a href="EuSouDoRock_Cadastro.html">Cadastro</a></li>
+                <li>Sobre Nós</li>
+                <li>Sou do ROCK?</li>
+        
+            </div>
+        </div>
     <div class="Trevas">
         
         <div class="Escuridao">
