--- a/EuSouDoRock_Inicio.html
+++ b/EuSouDoRock_Inicio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,30 +9,43 @@
 
 <link rel="stylesheet" href="EuSouDoRockComEstilo_inicio.css">
 
-<body>
-
+    <body class="banner">
 <div class="header">
 <div class="container">
     <div class="NavegandoNoRock">
         <h1>Eu Sou Do ROCK</h1>
 
-        <li>Inicio</li>
-        <li>Login</li>
-        <li><a href="EuSouDoRock_Cadastro.html">Cadastro</a></li>
+        <li><a href="EuSouDoRock_Inicio.html" class="li_letra">Inicio</a></li>
+        <li><a href="EuSouDoRock_Login.html" class="li_letra">Login</a></li>
+        <li><a href="EuSouDoRock_Cadastro.html" class="li_letra">Cadastro</a></li>
         <li>Sobre Nós</li>
         <li>Sou do ROCK?</li>
 
     </div>
 </div>
 
+<div class="Banner">
+<div class="container_banner">
+<div>
+<div class="BemVindo"><b><h1>BEM VINDO A MINHA PÁGINA!</h1></b></div>
 </div>
-<div class="a">
-    aaaaaaaaaaa
+</div>
+</div>
+<div class="info_siteBack">
+<div class="info_site">
+    <h3>
+        Olá, somos um site que é mais voltado para o ROCK!<br>
+        Aqui você poderá avaliar no mundo do ROCK seus colegas, amigos, familiaries e muito mais<br>
+        Saiba um pouco mais Sobre Nós se direcionando até a barra de navegação!
+    </h3>
+</div>
 </div>
 
 <footer>
+    <div class="div_footer">
+        <div class="div_footer2">
     <h5>Developer by Marcus Vinicius, @Copyright 2022</h5>
+        </div>
 </footer>
-
+    </div>
 </body>
-</html>
