Colocar o botão de gostei e conectar para metricas]

--- a/EuSouDoRock_Inicio.html
+++ b/EuSouDoRock_Inicio.html
@@ -18,8 +18,8 @@
         <li><a href="EuSouDoRock_Inicio.html" class="li_letra">Inicio</a></li>
         <li><a href="EuSouDoRock_Login.html" class="li_letra">Login</a></li>
         <li><a href="EuSouDoRock_Cadastro.html" class="li_letra">Cadastro</a></li>
-        <li>Sobre Nós</li>
-        <li>Sou do ROCK?</li>
+        <li><a href="EsouDoRock_SobreNós.html">Sobre Nós</a></li>
+        <li><a href="EuSouDoRock_Votação.html">Generos do ROCK</a></li>
 
     </div>
 </div>
