--- a/EuSouDoRock_Login.html
+++ b/EuSouDoRock_Login.html
@@ -17,13 +17,13 @@
                 <li><a href="EuSouDoRock_Inicio.html">Inicio</a></li>
                 <li><a href="EuSouDoRock_Login.html">Login</a></li>
                 <li><a href="EuSouDoRock_Cadastro.html">Cadastro</a></li>
-                <li>Sobre Nós</li>
-                <li>Sou do ROCK?</li>
+                <li><a href="EsouDoRock_SobreNós.html">Sobre Nós</a></li>
+                <li><a href="EuSouDoRock_Votação.html">Generos do ROCK</a></li>
         
             </div>
         </div>
     </div>
-    <div class="PaiDoRock"></div>
+    <div class="PaiDoRock">
             <div class="DoRock">
 
                 <form action="EuSouDoRock.html" method="post">
@@ -39,8 +39,9 @@
 
         </form>
 
-                <button onclick="AlertaDoROCK()">Confirmar que voce é do rock</button>
+               <br><button onclick="AlertaDoROCK()">Confirmar que voce é do rock</button>
             </div>
+    </div>
 </body>
 </html>
 <script>
