resolver b.o da api

--- a/public/EuSouDoRock_Votação.html
+++ b/public/EuSouDoRock_Votação.html
@@ -37,7 +37,6 @@
             <p>A Banda que você está ouvindo é a banda Polyphia!</p>
         </div>
 
-    <div class="card">
         <div class="card">
             <img class="user" src="https://studiosol-a.akamaihd.net/uploadfile/letras/fotos/d/5/c/0/d5c03fa0ef49e2eaa6fe081afc8e21c6.jpg" alt="">
             <h3>Alternativo</h3>
@@ -46,7 +45,7 @@
                     <p>Seu Browser não tem suporte a tag audio</p>
                 </audio>
             </div>
-            <p>A Banda que você está ouvindo é a banda Polyphia!</p>
+            <p>A Banda que você está ouvindo é a banda The Strokes!</p>
         </div>
 
         <div class="card">
@@ -55,7 +54,7 @@
             <div class="musicas">
                 <audio src="Polyphia1.mp3" autoplay controls muted loop>
                     <p>Seu Browser não tem suporte a tag audio</p>
-                </audio>
+                </audio> <button class="amei">amei</button>
             </div>
             <p>A Banda que você está ouvindo é a banda Polyphia!</p>
         </div>
